--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js",
-    "serve":"nodemon index.js"
+    "start": "node index.js",
+    "serve":"nodemon index.js",
   },
   "author": "Sridhar Rajaram",
   "license": "ISC",
