--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "serve":"nodemon index.js",
+    "serve":"nodemon index.js"
   },
   "author": "Sridhar Rajaram",
   "license": "ISC",
